--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -6,8 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activities.CallActivity">
 
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/endCall"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_marginBottom="24dp"
@@ -17,47 +22,47 @@
         app:srcCompat="@drawable/btn_endcall_normal" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/micBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintEnd_toStartOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        app:layout_constraintBottom_toBottomOf="@+id/endCall"
+        app:layout_constraintEnd_toStartOf="@+id/endCall"
+        app:layout_constraintTop_toTopOf="@+id/endCall"
         app:srcCompat="@drawable/btn_unmute_normal" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/vidBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        app:layout_constraintBottom_toBottomOf="@+id/endCall"
+        app:layout_constraintStart_toEndOf="@+id/endCall"
+        app:layout_constraintTop_toTopOf="@+id/endCall"
         app:srcCompat="@drawable/btn_video_normal" />
 
     <LinearLayout
         android:id="@+id/user_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/user_bg"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/imageView7"
+        app:layout_constraintBottom_toTopOf="@+id/endCall"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01999998">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:civ_border_overlay="@color/black"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
             android:paddingRight="5dp"
             android:paddingBottom="5dp"
-            android:src="@drawable/demo_user" />
+            android:src="@drawable/demo_user"
+            app:civ_border_overlay="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -89,4 +94,10 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/controls"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="vidBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
